# option-wheels-backtesting

./: .coverage  .gitignore  README.md  USAGE_GUIDE.md  main.py  pyproject.toml  quick_start.py  requirements.txt  wheel_strategy_backtest.py
.claude/commands/: backtest.md  quick-backtest.md
option_wheels_backtester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_backtest.py  test_call_operations.py  test_export_security.py  test_input_validation.py  test_metrics.py  test_premium.py  test_put_operations.py
