[project]
name = "option-wheels-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "yfinance>=0.2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
py-modules = ["wheel_strategy_backtest", "main", "quick_start"]
